# DirectX12Tutorial

./: .gitignore  CMakeLists.txt  CleanProjectFiles.bat  DirectX12Tutorial.sln  GenerateProjectFiles.bat  README.md  tutorial7.cpp
DirectX12Lib/: ApplicationWin32.cpp  ApplicationWin32.h  CMakeLists.txt  ColorBuffer.cpp  ColorBuffer.h  CommandContext.cpp  CommandContext.h  CommandListManager.cpp  CommandListManager.h  CommandQueue.cpp  CommandQueue.h  Common.h  D3D12RHI.cpp  D3D12RHI.h  DepthBuffer.cpp  DescriptorAllocator.cpp  DescriptorAllocator.h  DirectX12Lib.vcxproj  DirectX12Lib.vcxproj.filters  DynamicDescriptorHeap.cpp  DynamicDescriptorHeap.h  Game.cpp  Game.h  GpuBuffer.cpp  GpuBuffer.h  LinearAllocator.cpp  LinearAllocator.h  MathLib.cpp  MathLib.h  MeshData.cpp  MeshData.h  ObjLoader.cpp  ObjLoader.h  PipelineState.cpp  PipelineState.h  PixelBuffer.cpp  PixelBuffer.h  RenderWindow.cpp  RenderWindow.h  RootSignature.cpp  (+8 more)
DirectX12Lib/include/: ApplicationWin32.h  BufferManager.h  Camera.h  ColorBuffer.h  CommandContext.h  CommandListManager.h  CommandQueue.h  Common.h  CubeBuffer.h  CubeMapCross.h  D3D12RHI.h  D3D12Resource.h  DepthBuffer.h  DepthOfField.h  DescriptorAllocator.h  DynamicDescriptorHeap.h  GLTFLoader.h  Game.h  GameInput.h  GenerateMips.h  Geometry.h  GpuBuffer.h  ImguiManager.h  Light.h  LinearAllocator.h  MathLib.h  MeshData.h  Model.h  MotionBlur.h  ObjLoader.h  PipelineState.h  PixelBuffer.h  PostProcessing.h  RenderWindow.h  Renderer.h  RootSignature.h  SamplerManager.h  Scene.h  ScreenSpaceSubsurface.h  ShadowBuffer.h  (+5 more)
DirectX12Lib/src/: ApplicationWin32.cpp  BufferManager.cpp  Camera.cpp  ColorBuffer.cpp  CommandContext.cpp  CommandListManager.cpp  CommandQueue.cpp  Common.cpp  CubeBuffer.cpp  CubeMapCross.cpp  D3D12RHI.cpp  DepthOfField.cpp  DescriptorAllocator.cpp  DynamicDescriptorHeap.cpp  GLTFLoader.cpp  GameInput.cpp  GenerateMips.cpp  Geometry.cpp  GpuBuffer.cpp  ImguiManager.cpp  Light.cpp  LinearAllocator.cpp  MathLib.cpp  MeshData.cpp  Model.cpp  MotionBlur.cpp  ObjLoader.cpp  PipelineState.cpp  PixelBuffer.cpp  PostProcessing.cpp  RenderWindow.cpp  Renderer.cpp  Scene.cpp  ScreenSpaceSubsurface.cpp  ShadowBuffer.cpp  SkyBox.cpp  TemporalEffects.cpp  Texture.cpp  UserMarkers.cpp  WindowWin32.cpp
DirectX12Tutorial/: ApplicationWin32.cpp  ApplicationWin32.h  Camera.cpp  Camera.h  Common.cpp  Common.h  D3D12RHI.cpp  D3D12RHI.h  DirectX12Tutorial.vcxproj  DirectX12Tutorial.vcxproj.filters  MathLib.h  WindowWin32.cpp  WindowWin32.h  main.cpp
Resources/: triangle.frag
Resources/HDR/: PreIntegrateBRDF.dds  PreintegratedSkinLut.dds  de_balie_1k.hdr  de_balie_1k_IrradianceMap.dds  de_balie_1k_SHCoeffs.txt  de_balie_2k_IrradianceMap.dds  de_balie_2k_SHCoeffs.txt  delta_2_2k_IrradianceMap.dds  delta_2_2k_SHCoeffs.txt  modern_buildings_night_2k_IrradianceMap.dds  modern_buildings_night_2k_SHCoeffs.txt  museum_of_ethnography_2k_IrradianceMap.dds  museum_of_ethnography_2k_SHCoeffs.txt  readme.txt  spruit_sunrise_2k_IrradianceMap.dds  spruit_sunrise_2k_SHCoeffs.txt
Resources/Models/HumanHead/: HumanHead.FBX  HumanHead.mtl
Resources/Models/HumanHead/textures/: Head_Roughness.tga
Resources/Models/SponzaPBR_dds2tga/: sponza_pbr.mtl
Resources/Models/harley/: harley.mtl
Resources/Models/harley/harley_davidson_breakout_gltf/: scene.gltf
Resources/Models/primitive/: Plane.mtl  mtllib.mtl
Resources/Shaders/: AtmosphericScatteringCS.hlsl  AtmosphericScatteringCommon.hlsl  AtmosphericScatteringPS.hlsl  BlurCS.hlsl  BlurHorizontalCS.hlsl  BlurVerticalCS.hlsl  CameraVelocityCS.hlsl  DepthOfField_BokehFilter.hlsl  DepthOfField_CoC.hlsl  DepthOfField_Combine.hlsl  DepthOfField_Postfilter.hlsl  DepthOfField_Prefilter.hlsl  DiskKernels.hlsl  EnvironmentShaders.hlsl  GenerateMips.hlsl  HZB.hlsl  ImGUI.hlsl  LTC_Floor.hlsl  LTC_LightPolygon.hlsl  PBR.hlsl  PostProcess.hlsl  PreIntegratedSkin.hlsl  PreIntegratedSkinLut.hlsl  PreIntegratedSkinShading.hlsl  ResolveTAACS.hlsl  SSR.hlsl  ScreenSpaceSubsurfaceBlur.hlsl  ScreenSpaceSubsurfaceCombine.hlsl  ShaderUtils.hlsl  Shadow.hlsl  ShadowPCF.hlsl  ShadowVSM.hlsl  SkinPBR.hlsl  SponzaPBR.hlsl  TempBufferCopy.hlsl  TemporalBlendCS.hlsl  VSMConvertCS.hlsl  simple.hlsl  triangle.hlsl  triangle.vert  (+1 more)
Resources/gltf2.0/DamagedHelmet/glTF/: DamagedHelmet.fbx
Supplement/: CMakeLists.txt
Supplement/FitLTCMatrix/: CMakeLists.txt  brdf_ggx.h  export.h  fitLTC.cpp
Tutorial02/: tutorial2.cpp
Tutorial03/: tutorial3.cpp
Tutorial04/: tutorial4.cpp
Tutorial05/: tutorial5.cpp
Tutorial06/: tutorial6.cpp
Tutorial07/: tutorial7.cpp
Tutorial08/: tutorial8.cpp
Tutorial09/: tutoria9_1.cpp  tutorial9.cpp
Tutorial1/: Tutorial1.vcxproj  Tutorial1.vcxproj.filters  tutorial1.cpp
Tutorial10/: tutoria10.cpp
Tutorial2/: Tutorial2.vcxproj  Tutorial2.vcxproj.filters  main.cpp  tutorial2.cpp
Tutorial3/: Tutorial3.vcxproj  Tutorial3.vcxproj.filters  tutorial3.cpp
Tutorial4/: Tutorial4.vcxproj  Tutorial4.vcxproj.filters  tutorial4.cpp
Tutorial5/: Tutorial5.vcxproj  Tutorial5.vcxproj.filters  tutorial5.cpp
Tutorial6/: Tutorial6.vcxproj  Tutorial6.vcxproj.filters  tutorial6.cpp
TutorialAO/: TutorialAO.cpp
TutorialLTC/: TutorialLTC.cpp
TutorialSkin/: TutorialSkin.cpp
