set(HEADER_FILES
	include/ApplicationWin32.h
	include/Camera.h
	include/ColorBuffer.h
	include/CommandContext.h
	include/CommandListManager.h
	include/CommandQueue.h
	include/Common.h
	include/D3D12Resource.h
	include/D3D12RHI.h
	include/d3dx12.h
	include/DepthBuffer.h
	include/DescriptorAllocator.h
	include/DynamicDescriptorHeap.h
	include/Game.h
	include/GpuBuffer.h
	include/LinearAllocator.h
	include/MathLib.h
	include/MeshData.h
	include/ObjLoader.h
	include/PipelineState.h
	include/PixelBuffer.h
	include/RenderWindow.h
	include/RootSignature.h
	include/SamplerManager.h
	include/Texture.h
	include/Timer.h
	include/WindowWin32.h
	 )

set(SOURCES
	src/ApplicationWin32.cpp
	src/Camera.cpp
	src/ColorBuffer.cpp
	src/CommandContext.cpp
	src/CommandListManager.cpp
	src/CommandQueue.cpp
	src/Common.cpp
	src/D3D12RHI.cpp
	src/DepthBuffer.cpp
	src/DescriptorAllocator.cpp
	src/DynamicDescriptorHeap.cpp
	src/Game.cpp
	src/GpuBuffer.cpp
	src/LinearAllocator.cpp
	src/MathLib.cpp
	src/MeshData.cpp
	src/ObjLoader.cpp
	src/PipelineState.cpp
	src/PixelBuffer.cpp
	src/RenderWindow.cpp
	src/RootSignature.cpp
	src/Texture.cpp
	src/Timer.cpp
	src/WindowWin32.cpp
)

add_library(DirectX12Lib
	${HEADER_FILES}
	${SOURCES}
	)
target_include_directories(DirectX12Lib PUBLIC include)

target_link_libraries(DirectX12Lib LINK_PUBLIC DirectXTex)
